# AOC2022

./: CMakeLists.txt
day01/: day1main.cpp
day04/: day4main.cpp
day07/: day7main.cpp
day09/: main.cpp
day10/: main.cpp
day11/: main.cpp
day12/: main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day2/: day2main.cpp
day3/: day3main.cpp
day5/: day5main.cpp
day6/: day6main.cpp
day8/: main.cpp
